apps/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 80
